--- a/com.cloudera.companies.repo/com.cloudera.companies.repo.runtime/pom.xml
+++ b/com.cloudera.companies.repo/com.cloudera.companies.repo.runtime/pom.xml
@@ -48,11 +48,12 @@
 						<phase>process-sources</phase>
 						<configuration>
 							<target>
-								<mkdir dir="${project.build.directory}/${project.runtime-test-dir}/hadoop/etc/hadoop" />
+								<mkdir dir="${project.build.directory}/${project.runtime-test-dir}" />
 								<symlink
 									link="${project.build.directory}/${project.runtime-test-dir}/hadoop"
 									resource="${project.build.directory}/${project.runtime-test-dir}/hadoop-${hadoop.version}"
 									failonerror="false" overwrite="true" />
+								<mkdir dir="${project.build.directory}/${project.runtime-test-dir}/hadoop/etc/hadoop" />								
 								<echo
 									file="${project.build.directory}/${project.runtime-test-dir}/hadoop/etc/hadoop/hadoop-env.sh"
 									append="true">									
