--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
 		<maven.test.skip>false</maven.test.skip>
 		<maven.system-test.skip>true</maven.system-test.skip>
 		<maven.integration-test.skip>true</maven.integration-test.skip>
+		<maven.data-download.skip>true</maven.data-download.skip>
+		<maven.assembly.skip>false</maven.assembly.skip>
 
 		<java.version>1.6</java.version>
 		<hadoop.version>2.0.0-cdh4.2.1</hadoop.version>
