--- a/com.cloudera.companies.repo/com.cloudera.companies.repo.runtime/pom.xml
+++ b/com.cloudera.companies.repo/com.cloudera.companies.repo.runtime/pom.xml
@@ -1,16 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.cloudera.companies.repo</groupId>
 	<artifactId>com.cloudera.companies.repo.runtime</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 
 	<parent>
 		<groupId>com.cloudera.companies</groupId>
 		<artifactId>com.cloudera.companies.repo</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<build>
@@ -49,13 +48,8 @@
 						<configuration>
 							<target>
 								<mkdir dir="${project.build.directory}/${project.runtime-test-dir}" />
-								<symlink
-									link="${project.build.directory}/${project.runtime-test-dir}/hadoop"
-									resource="${project.build.directory}/${project.runtime-test-dir}/hadoop-${hadoop.version}"
-									failonerror="false" overwrite="true" />
-								<echo
-									file="${project.build.directory}/${project.runtime-test-dir}/hadoop/etc/hadoop/hadoop-env.sh"
-									append="true">									
+								<symlink link="${project.build.directory}/${project.runtime-test-dir}/hadoop" resource="${project.build.directory}/${project.runtime-test-dir}/hadoop-${hadoop.version}" failonerror="false" overwrite="true" />
+								<echo file="${project.build.directory}/${project.runtime-test-dir}/hadoop/etc/hadoop/hadoop-env.sh" append="true">									
 									export HADOOP_CLIENT_OPTS="$HADOOP_CLIENT_OPTS -Xmx${project.runtime.heap.max}m"
 								</echo>
 							</target>
